[package]
edition = "2024"
name = "task-bot-rs"
version = "1.0.0"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenvy = "0.15.7"
itertools = "0.14.0"
poise = {git = "https://github.com/serenity-rs/poise.git"}
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.135"
tokio = {version = "1.43.0", features = ["rt-multi-thread", "fs"]}
uuid = {version = "1.11.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
